Prevent long urls overflowing onto a new line

--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,9 @@ footer nav {
   margin-right: .5em;
   float: left;
   display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .friend li {
   clear: left;
